upcoming
* New video command
* Enhance camera management
* New ASmack library
* New setting to filter notified address resources
* New setting to configure the ping interval
* Adds more details during connection establishment

4.4.1
* Fixes connection issue introduced in 4.4 when having pending offline messages
* Improves MUC creation

4.4
* UI enhancements for better usability
* Get all notifications of your phone via the accessibility feature and new command notification
* MMS notifications
* MMS command to read MMS stored in the phone
* Music command to control the Music application of the phone (play/stop/next/previous/volume...)
* Settings command to update GTalkSMS settings via Xmpp

4.3
* Commands can be completely disabled to save resources,  e.g. TTS (Issue 287)
* Added "Ping Server" button (does not work always) (Issue 292)
* Removed Google Analytics and AdMob - GTalkSMS is now AdFree! (Issue 293)
* Initiate a call with bypassing the dialer interface (Issue 297)

4.1 - 4.2
* Fix compatibility issues between old Android version and Holo
* Bug fixes

4.0
* New Applications command to see or start installed applications
* New Text To Speech command
* Command "wappend" & "wsend" to add text as a virtual keyboard and validate the field
* New UI with Holo theme
* Removed Google Analytics

3.5
* Command manager to enable/disable commands
* Bug fixes
* DelSms now works with phone numbers

3.4
* Make use of XEP-0033 if possible
* Fixed issue with gTalk loops (Issue 43)
* Added delay before automatic disconnect on A/C (Issue 191)

3.3
* Improved file transfers by adding an local XMPP S5B proxy
* Added support for tablet (Honeycomb) devices
* Added "wifi" command to enable/disable and view WiFi status (Beta)

3.2
* Bug fixes
* Ignore / reject commands for phone calls (Beta)

3.1
* Bug fixes
* New Xmpp library

3.0
* File transfer
* Take photo and receive them via XMPP with front and back camera
* Screenshot feature (Rooted phones only)